# melbourne-property-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
src/api/: main.py
src/index/: chunker.py  embedder.py  vectorstore.py
src/ingestion/: geocoder.py  news_scraper.py  scraper.py  storage.py
src/query/: llm_client.py  rag.py
src/tracking/: mlflow_utils.py
tests/: test_api.py  test_chunker.py  test_ingestion.py
