[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "melbourne-property-intelligence"
version = "0.1.0"
description = "Melbourne property market intelligence — auction data, LLM-powered insights, and RAG query engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Samuel Wong", email = "samuel@datafying.com.au"}
]

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "sqlalchemy>=2.0",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "mlflow>=2.8",
    "pydantic>=2.5",
    "streamlit>=1.28",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
